2005-08-10  Pavel Roskin  <proski@gnu.org>

	* choosesyntax.c (edit_syntax_dialog): Add parentheses as
	suggested by gcc.
	* editkeys.c: Use braces in the keymap initializers.

2005-07-27  Leonard den Ottolander  <leonard den ottolander nl>

	* choosesyntax.c: Add option to reload current syntax.

2005-07-24  Leonard den Ottolander  <leonard den ottolander nl>

	* choosesyntax.c: Create file. Menu option to override syntax
	highlighting.
	* Makefile.am: Add choosesyntax.c..
	* edit.c (edit_init): Set option_auto_syntax to 1 on every invokation
	of the 	editor.
	* edit.h: Pass char*** to edit_load_syntax(). Add parameters for
	syntax dialog and override.
	* editmenu.c (menu_options): Add menu option to override syntax
	highlighting.
	* editoptions.c (edit_options_dialog): Pass option_syntax_type to
	edit_load_syntax().
	* syntax.c (edit_read_syntax_file): Dynamically allocate and fill
	syntax list pnames.
	* syntax.c (edit_load_syntax): Use char*** for syntax list.

2005-05-21  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: Add usermap.h to the sources.

2005-07-20  Vitja Makarov  <vitja.makarov@gmail.com>

	* usermap.c: Allow user-defined keyboard bindings for mcedit.
	* usermap.h: Likewise.
	* Makefile.am: Likewise.
	* editcmd.c: Define new editor commands which had been coded
	inline before.
	This change also affects some other files.

2005-07-20  Roland Illig  <roland.illig@gmx.de>

	* edit-widget.h: Invented a new type edit_key_map_type instead of
	using long for.
	* editkeys.c: Using that type.

2005-07-18  Roland Illig  <roland.illig@gmx.de>

	* editkeys.c: When typing literal characters after C-q, allow
	the alphabetic characters to input ASCII control characters.

2005-07-06  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Added missing #include <stdio.h>.

2005-06-14  Roland Illig  <roland.illig@gmx.de>

	* editwidget.c: Don't dereference WButtonBar.

2005-05-23  Roland Illig  <roland.illig@gmx.de>
