@@ -1,3 +1,8 @@
+2005-08-15  Roland Illig  <roland.illig@gmx.de>
+
+	* edit-widget.h: Changed bit fields of length 1 from signed to
+	unsigned.
+
 2005-08-10  Pavel Roskin  <proski@gnu.org>
 
 	* choosesyntax.c (edit_syntax_dialog): Add parentheses as
